# CigarBoxAI

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: caller.py  data_optimizer_gemini.py  data_preparation.py  data_preparation_v2.py
scripts/prompts/: default.json
scripts/universal_optimized_results/: universal_compatibility_report.json  usage_examples.json
scripts/validation/: validation_set_1.json
